objects/ContractLineItemSchedule__c.object
<CustomObject>
    <description>SFDC1-905 This is a custom object, which will be related to contract line item.
SFDC1-10132: Updated object label name to Fixed Fee Schedule Line Item</description>
    <fields>
        <fullName>AutoRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-135: Checkbox to show if Fixed Fee Line Item Schedule is an Auto-Renewal or not.</description>
        <label>Auto-Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingDate__c</fullName>
        <description>MIG-214 - Billing Date field in Contract Line Item Schedule to save Legacy data for cleanup exercise post-go-live. Only visible to Contract Management and System Admin</description>
        <inlineHelpText>Only visible to Contract Management and System Admin</inlineHelpText>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractLineItem__c</fullName>
        <description>SFDC1-380 This field holds the value of contract line item record to which contract line item schedule is related
SFDC1-10132 rename the label</description>
        <inlineHelpText>Contract Line Item</inlineHelpText>
        <label>Contract Line Item</label>
        <referenceTo>ContractLineItem__c</referenceTo>
        <relationshipLabel>Fixed Fee Schedule Line Item</relationshipLabel>
        <relationshipName>ContractLineItemSchedule</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>SFDC1-380 This is a lookup to Contract record, to which contract line item schedule is related</description>
        <inlineHelpText>Related Contract</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Line Item Schedules</relationshipLabel>
        <relationshipName>ContractLineItemSchedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-525: Current Annual Contract Value - Flag to rollup amount to contract</description>
        <inlineHelpText>Represents if schedule is valid for current fiscal year</inlineHelpText>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <description>SFDC1-380 This field gets populated from opportunity product schedule - Discount Amount field when contract is created from wizard</description>
        <inlineHelpText>Discount Amount</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiscountPercent__c</fullName>
        <description>SFDC1-380 This field gets populated from opportunity product schedule - discount % field when contract is created from wizard</description>
        <inlineHelpText>Discount %</inlineHelpText>
        <label>Discount%</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DiscountType__c</fullName>
        <description>SFDC1-380 This field gets populated from opportunity product schedule - discount type field when contract is created from wizard</description>
        <inlineHelpText>Discount Type</inlineHelpText>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>No Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalListPrice__c</fullName>
        <description>SFDC1-380 This field gets populated from opportunity product schedule - external list price field when contract is created from wizard</description>
        <inlineHelpText>External List Price</inlineHelpText>
        <label>External List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InstallmentYear__c</fullName>
        <description>SFDC1-380 This is a text field which copies InstallmentYear__c from Opportunity Product Schedule</description>
        <inlineHelpText>Installment Year</inlineHelpText>
        <label>Installment Year</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstallmentYears__c</fullName>
        <description>SFDC1-380 This is a text field which copies InstallmentYears__c from Opportunity Product Schedule</description>
        <inlineHelpText>Installment Year</inlineHelpText>
        <label>zzzInstallment Year</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SFDC1-7046: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the system id (unfriendly) referencing the source record and is populated via migrating system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MaterialCode__c</fullName>
        <description>SFDC1-10062 : This will hold the value for Contract Line Item&apos;s Material Code</description>
        <formula>ContractLineItem__r.MaterialCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Line Item&apos;s Material Code</inlineHelpText>
        <label>Material Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceIncreaseId__c</fullName>
        <description>SFDC-3187 Unique id to map opportunity schedule that created new fixed fee line item</description>
        <externalId>true</externalId>
        <inlineHelpText>Auto generated ID to identify opportunity schedule with the fixed fee line item. This is the id of the opportunity from which the price increase was triggered</inlineHelpText>
        <label>Price Increase Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesPrice__c</fullName>
        <description>SFDC1-380 This field gets populated from opportunity product schedule - sales price (SFDC-1091 - Total Sales Price) field when contract is created from wizard</description>
        <inlineHelpText>Total Sales Price</inlineHelpText>
        <label>Total Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SFDC1-9865 Status field on Contract Line item Schedules</description>
        <inlineHelpText>When a new Contract Line Item Schedule record is created, the Status field should be set to &quot;Active&quot;</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fixed Fee Schedule Line Item</label>
    <nameField>
        <displayFormat>CLS-{0000000}</displayFormat>
        <label>Fixed Fee Schedule Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fixed Fee Schedule Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ContractCurrencyCheck</fullName>
        <active>true</active>
        <description>SFDC-1438 - Volume/Variable Billing Line Item Currency
SFDC-525 - Added System Admin bypass</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.ContractLineItemSchedule__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
AND(
Contract__r.Currency__c &lt;&gt; TEXT(CurrencyIsoCode),
$Profile.Name != &apos;System Administrator&apos;,
$Profile.Name != &apos;IHSMarkit System Admin&apos;,
NOT(CONTAINS($Profile.Name, &quot;Contract Management&quot;)),
NOT(CONTAINS($Profile.Name, &quot;User Support&quot;)))
)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Incorrect Currency Code, Please Refer to the Contract and Update Accordingly</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CorrectContractNumberOnCLIS</fullName>
        <active>true</active>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.ContractLineItemSchedule__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
AND(
ISNEW(),
OR(
Contract__c &lt;&gt; Contract__r.Id,
ContractLineItem__r.Contract__c &lt;&gt; Contract__c 
)
)
)</errorConditionFormula>
        <errorDisplayField>Contract__c</errorDisplayField>
        <errorMessage>You must select the contract related to this fixed fee line.</errorMessage>
    </validationRules>
</CustomObject>